[package]
name = "fatal-error"
version = "1.0.0"
edition = "2021"
authors = ["Alois Masanell <massou@cantina.space>"]
description = "Differentiate errors and fatal errors"
keywords = ["error", "error-handling"]
readme = "readme.md"
include = ["Cargo.toml", "readme.md", "license", "src/**"]
license = "BSD-3-Clause"
categories = ["rust-patterns"]
homepage = "https://github.com/cantina-space/fatal-error"
documentation = "https://docs.rs/fatal-error"
repository = "https://github.com/cantina-space/fatal-error"
